--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,15 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true"
       android:theme="@style/AppTheme">
-    <activity android:name=".MainActivity">
+    <activity android:name=".ui.todosList.TodosListActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
-      <activity android:name=".TodoActivity"
-          android:parentActivityName=".MainActivity"/>
+      <activity android:name=".ui.todoDetails.TodoActivity"
+          android:parentActivityName=".ui.todosList.TodosListActivity"/>
   </application>
 
 </manifest>
