--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,8 @@ android {
 }
 
 dependencies {
+    def markwon_version = '4.6.0'
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
     // Language
@@ -43,6 +45,16 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     implementation "com.google.android.material:material:1.3.0-alpha02"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+
+    // Markwon { @link https://github.com/noties/Markwon }
+    implementation "io.noties.markwon:core:$markwon_version"
+    implementation "io.noties.markwon:editor:$markwon_version"
+    implementation "io.noties.markwon:ext-tables:$markwon_version"
+    implementation "io.noties.markwon:ext-tasklist:$markwon_version"
+    implementation "io.noties.markwon:html:$markwon_version"
+    implementation "io.noties.markwon:image:$markwon_version"
+    implementation "io.noties.markwon:linkify:$markwon_version"
+    implementation "com.caverock:androidsvg-aar:1.4"
 
     // Test
     testImplementation 'junit:junit:4.12'
